# vulkthing

./: .gitignore  Cargo.toml  build.rs  renderer.kdl
benches/: voxels.rs
codegen/: Cargo.toml
codegen/src/: config.rs  generate.rs  helper.rs  lib.rs  reflect.rs  shaders.rs  types.rs
shaders/: atmosphere.frag  atmosphere.vert  bindings.glsl  bindings.slang  camera.glsl  camera.slang  debug.frag  debug_voxel_chunk.mesh  debug_voxel_screen_bound.frag  debug_voxel_screen_bound.mesh  debug_voxel_triangle.frag  debug_voxel_triangle.mesh  debug_voxel_world_bound.frag  debug_voxel_world_bound.mesh  deferred.frag  extract.frag  gaussian.frag  gaussian.vert  geometry.glsl  geometry.slang  global.slang  grass.frag  grass.vert  limits.conf  main.slang  model.frag  model.vert  object.frag  object.vert  pathtrace.frag  pathtrace.vert  postprocess.frag  quad.vert  skybox.frag  skybox.vert  star.frag  star.vert  sum.comp  sun.frag  sun.vert  (+10 more)
shaders/debug_voxel_screen_bound/: fragment.glsl  mesh.glsl
shaders/debug_voxel_triangle/: fragment.glsl  mesh.glsl
shaders/debug_voxel_world_bound/: fragment.glsl  mesh.glsl
shaders/lighting/: atmosphere.glsl  pbr.glsl  raytracing.glsl
shaders/postprocess/: white-balance.glsl
shaders/skybox/: fragment.glsl  vertex.glsl
shaders/star/: fragment.glsl  vertex.glsl
shaders/sun/: fragment.glsl  vertex.glsl
shaders/tonemapper/: hill-aces.glsl  narkowicz-aces.glsl  reinhard.glsl  rgb-clamping.glsl
shaders/types/: star.glsl  uniform.glsl  voxel.glsl
shaders/util/: camera.glsl  geometry.glsl  oklab.glsl
shaders/voxel/: fragment.glsl  mesh.glsl  task.glsl
shaders/voxel_rt/: fragment.glsl  vertex.glsl
src/: camera.rs  chunks.rs  cli.rs  config.rs  gpu.rs  grass.rs  input.rs  interface.rs  lib.rs  logger.rs  main.rs  mesh.rs  model.rs  physics.rs  planet.rs  renderer.rs  types.rs  util.rs  voxel.rs  voxels.rs  window.rs  world.rs
src/camera/: first_person.rs  space.rs
src/interface/: integration.rs
src/renderer/: barrier.rs  codegen.rs  debug.rs  descriptors.rs  device.rs  gpu_data.rs  graph.rs  init.rs  lifecycle.rs  pass.rs  pipeline.rs  pipelines.rs  raytracing.rs  samplers.rs  shader.rs  swapchain.rs  swapchain_waiter.rs  traits.rs  uniform.rs  util.rs  vertex.rs
src/util/: geometry.rs
src/voxel/: binary_cube.rs  chunk_priority.rs  culled_meshing.rs  gpu.rs  gpu_memory.rs  greedy_meshing.rs  local_mesh.rs  material.rs  meshing.rs  meshlet.rs  neighbourhood.rs  sparse_octree.rs  square_invariant.rs  thread.rs  vertex.rs  world_generation.rs
src/voxels/: binary_cube.rs  culled_meshing.rs  greedy_meshing.rs  meshlet.rs  (+1 more)
(+4 files in other folders)
