[package]
name = "vulkthing"
version = "0.0.0"
edition = "2021"

[dependencies]
ash = "0.37"
ash-window = "0.12"
bracket-noise = "0.8"
imgui = "0.11"
imgui-rs-vulkan-renderer = { version = "1.12", features = ["dynamic-rendering"] }
log = "0.4"
meshopt = "0.2"
nalgebra = { version = "0.32", features = ["std"], default-features = false }
num-traits = "0.2"
rand = { version = "0.8", features = ["small_rng"] }
rapier3d = "0.17"
# TODO: Upgrade to raw-window-handle 0.6 once ash-window is compatible.
raw-window-handle = "0.5"
shaderc = { git = "https://github.com/google/shaderc-rs" }
tobj = { version = "4.0", default-features = false }
winit = { version = "0.29", features = ["rwh_05", "wayland", "x11"], default-features = false }

[dev-dependencies]
criterion = "0.5"

[build-dependencies]
codegen = { path = "codegen" }

[[bench]]
name = "voxels"
harness = false
